src/objects/SW_Project_Moto_Core_Directory__c.object
<CustomObject>
    <fields>
        <fullName>Motorola_Core_Directory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motorola Core Directory</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>SW_Proejct_Moto_Core_Directories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipName>SW_Proejct_Moto_Core_Directories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>time_dedicated__c</fullName>
        <label>% time dedicated</label>
        <precision>9</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>SW Project Moto Core Directory</label>
    <nameField>
        <displayFormat>SWMCD-{00000000}</displayFormat>
        <label>SW Proejct Moto Core Directory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SW Project Moto Core Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>